Add s3 config for images

--- a/config/grafana.ini
+++ b/config/grafana.ini
@@ -26,15 +26,18 @@ max_annotations_to_keep = 0
 [emails]
 welcome_email_on_sign_up = true
 
-;[external_image_storage.s3]
-;endpoint
-;path_style_access
-;bucket_url
-;bucket
-;region
-;path
-;access_key
-;secret_key
+[external_image_storage]
+provider = s3
+
+[external_image_storage.s3]
+endpoint = minio.:9000
+path_style_access = true
+;bucket_url = 
+bucket = grafana
+region = darlinghurst
+path = images
+access_key = yrE9FG3seKnYFEPM93FH
+secret_key = H2ePujOlOWdEwCd3KwR4o79fmEo2rVSwKPQzRmOK
 
 [feature_toggles]
 traceToMetrics = true
