--- a/config/grafana.ini
+++ b/config/grafana.ini
@@ -30,14 +30,13 @@ welcome_email_on_sign_up = true
 provider = s3
 
 [external_image_storage.s3]
-endpoint = minio.:9000
+endpoint = http://minio.:9000
 path_style_access = true
-;bucket_url = 
 bucket = grafana
 region = darlinghurst
 path = images
-access_key = yrE9FG3seKnYFEPM93FH
-secret_key = H2ePujOlOWdEwCd3KwR4o79fmEo2rVSwKPQzRmOK
+access_key = grafana
+secret_key = 3agCDqvh3evyfDbY
 
 [feature_toggles]
 traceToMetrics = true
