--- a/config/grafana.ini
+++ b/config/grafana.ini
@@ -30,13 +30,9 @@ welcome_email_on_sign_up = true
 provider = s3
 
 [external_image_storage.s3]
-endpoint = http://minio.:9000
+endpoint = http://grafana:3agCDqvh3evyfDbY@minio.:9000/grafana
 path_style_access = true
-bucket = grafana
 region = darlinghurst
-path = images
-access_key = grafana
-secret_key = 3agCDqvh3evyfDbY
 
 [feature_toggles]
 traceToMetrics = true
