--- a/config/grafana.ini
+++ b/config/grafana.ini
@@ -30,7 +30,7 @@ welcome_email_on_sign_up = true
 provider = s3
 
 [external_image_storage.s3]
-endpoint = http://grafana:3agCDqvh3evyfDbY@minio.:9000/grafana
+endpoint = http://grafana:3agCDqvh3evyfDbY@minio:9000/grafana
 path_style_access = true
 region = darlinghurst
 
