--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
         target: /etc/grafana/provisioning/datasources/tempo.yml
     environment:
       GF_INSTALL_PLUGINS: https://grafana.com/api/plugins/novatec-sdg-panel/versions/4.0.3/download;novatec-sdg-panel,grafana-image-renderer
-      GF_RENDERING_SERVER_URL: http://renderer:8081/render
+      GF_RENDERING_SERVER_URL: http://grafana-renderer:8081/render
       GF_RENDERING_CALLBACK_URL: http://grafana:3000/
     deploy:
       replicas: 1
@@ -49,6 +49,25 @@ services:
     logging:
       options:
         loki-external-labels: "job=grafana"
+        
+  grafana-renderer:
+    image: grafana/grafana-image-renderer:latest
+    networks:
+      - infrastructure
+    deploy:
+      replicas: 1
+      rollback_config:
+        parallelism: 0
+        failure_action: continue
+        order: stop-first
+      update_config:
+        parallelism: 1
+        delay: 10s
+        failure_action: rollback
+        order: stop-first
+    logging:
+      options:
+        loki-external-labels: "job=grafana-renderer"
 
 configs:
   grafana_config:
