--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
         target: /etc/grafana/provisioning/datasources/tempo.yml
     environment:
       GF_INSTALL_PLUGINS: https://grafana.com/api/plugins/novatec-sdg-panel/versions/4.0.3/download;novatec-sdg-panel,grafana-image-renderer
-      GF_RENDERING_SERVER_URL: http://grafana-renderer:8081/render
+      GF_RENDERING_SERVER_URL: http://grafana_renderer:8081/render
       GF_RENDERING_CALLBACK_URL: http://grafana:3000/
     deploy:
       replicas: 1
@@ -50,7 +50,7 @@ services:
       options:
         loki-external-labels: "job=grafana"
         
-  grafana-renderer:
+  grafana_renderer:
     image: grafana/grafana-image-renderer:latest
     networks:
       - infrastructure
