--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,9 @@ services:
       - infrastructure
     deploy:
       replicas: 1
+      placement:
+        constraints:
+          - "node.labels.platform==linux"
       rollback_config:
         parallelism: 0
         failure_action: continue
