--- a/config/grafana.ini
+++ b/config/grafana.ini
@@ -30,9 +30,13 @@ welcome_email_on_sign_up = true
 provider = s3
 
 [external_image_storage.s3]
-endpoint = http://grafana:3agCDqvh3evyfDbY@minio:9000/grafana
+endpoint = http://minio.:9000
 path_style_access = true
+bucket = grafana
 region = darlinghurst
+path = images
+access_key = grafana
+secret_key = 3agCDqvh3evyfDbY
 
 [feature_toggles]
 traceToMetrics = true
