--- a/config/grafana.ini
+++ b/config/grafana.ini
@@ -35,8 +35,8 @@ path_style_access = true
 bucket = grafana
 region = darlinghurst
 path = images
-access_key = grafana
-secret_key = 3agCDqvh3evyfDbY
+access_key = L35uhjKl3z3jUiTj6sqQ
+secret_key = pHkgeX420zDRIxeT5RRJG1Tw0qm7HSfozAblo07E
 
 [feature_toggles]
 traceToMetrics = true
