--- a/config/grafana.ini
+++ b/config/grafana.ini
@@ -30,11 +30,9 @@ welcome_email_on_sign_up = true
 provider = s3
 
 [external_image_storage.s3]
-endpoint = http://minio.:9000
+bucket_url = http://minio.:9000/grafana
 path_style_access = true
-bucket = grafana
 region = darlinghurst
-path = images
 access_key = L35uhjKl3z3jUiTj6sqQ
 secret_key = pHkgeX420zDRIxeT5RRJG1Tw0qm7HSfozAblo07E
 
