--- a/config/grafana.ini
+++ b/config/grafana.ini
@@ -30,9 +30,12 @@ welcome_email_on_sign_up = true
 provider = s3
 
 [external_image_storage.s3]
-bucket_url = http://grafana:BqsPo9C7d2DnVtFP@minio.:9000/grafana
+endpoint = http://minio.:9000
 path_style_access = true
+bucket = grafana
 region = darlinghurst
+access_key = 2VjIOkNkhdwKreiPdmpp
+secret_key = fby18ZpU5K16jPNs3IYIAaUqlnwBHo7CwIrj8wvx
 
 [feature_toggles]
 traceToMetrics = true
