--- a/config/grafana.ini
+++ b/config/grafana.ini
@@ -30,7 +30,7 @@ welcome_email_on_sign_up = true
 provider = s3
 
 [external_image_storage.s3]
-endpoint = http://minio:9000
+endpoint = minio:9000
 path_style_access = true
 bucket = grafana
 region = darlinghurst
