Update rendering configuration

--- a/config/grafana.ini
+++ b/config/grafana.ini
@@ -76,6 +76,11 @@ enabled = true
 ;[remote_cache]
 ;type = database
 
+[rendering]
+server_url = http://grafana_renderer:8081/render
+callback_url = http://grafana:3000/
+concurrent_render_request_limit = 100
+
 [server]
 protocol = http
 http_port = 3000
