--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,7 @@ services:
         target: /etc/grafana/provisioning/datasources/tempo.yml
     environment:
       GF_INSTALL_PLUGINS: https://grafana.com/api/plugins/novatec-sdg-panel/versions/4.0.3/download;novatec-sdg-panel,grafana-image-renderer
-      GF_RENDERING_SERVER_URL: http://grafana_renderer:8081/render
-      GF_RENDERING_CALLBACK_URL: http://grafana:3000/
+      GF_RENDERING_RENDERER_TOKEN: ${GRAFANA_RENDERER_AUTH_TOKEN}
     deploy:
       replicas: 1
       placement:
@@ -54,6 +53,11 @@ services:
     image: grafana/grafana-image-renderer:latest
     networks:
       - infrastructure
+    configs:
+      - source: grafana_renderer_config
+        target: /usr/src/app/config.json
+    environment:
+      AUTH_TOKEN: ${GRAFANA_RENDERER_AUTH_TOKEN}
     deploy:
       replicas: 1
       placement:
@@ -68,6 +72,10 @@ services:
         delay: 10s
         failure_action: rollback
         order: stop-first
+      labels:
+        prometheus.job: grafana_renderer
+        prometheus.port: 8081
+        prometheus.path: /metrics
     logging:
       options:
         loki-external-labels: "job=grafana_renderer"
@@ -85,6 +93,9 @@ configs:
   grafana_datasource_tempo:
     file: config/grafana.datasource.tempo.yml
     name: grafana_datasource_tempo
+  grafana_renderer_config:
+    file: config/grafana.datasource.tempo.yml
+    name: grafana_renderer_config
 
 volumes:
   grafana_data:
