add screenshot to grafana config

--- a/config/grafana.ini
+++ b/config/grafana.ini
@@ -30,12 +30,10 @@ welcome_email_on_sign_up = true
 provider = s3
 
 [external_image_storage.s3]
-endpoint = minio:9000
+endpoint = http://minio:9000
 path_style_access = true
 bucket = grafana
 region = darlinghurst
-access_key = 2VjIOkNkhdwKreiPdmpp
-secret_key = fby18ZpU5K16jPNs3IYIAaUqlnwBHo7CwIrj8wvx
 
 [feature_toggles]
 traceToMetrics = true
@@ -106,3 +104,15 @@ enable_gzip = true
 [tracing.opentelemetry.otlp]
 address = tempo:4317
 propagation = w3c
+
+[unified_alerting]
+enabled = true
+execute_alerts = true
+evaluation_timeout = 3m
+max_attempts = 3
+min_interval = 10s
+
+[unified_alerting.screenshots]
+capture = true
+max_concurrent_screenshots = 15
+upload_external_image_storage = true
