Update query limit and s3 endpoint

--- a/config/grafana.ini
+++ b/config/grafana.ini
@@ -30,7 +30,7 @@ welcome_email_on_sign_up = true
 provider = s3
 
 [external_image_storage.s3]
-endpoint = http://minio:9000
+endpoint = http://minio.:9000
 path_style_access = true
 bucket = grafana
 region = darlinghurst
@@ -50,8 +50,6 @@ enabled = true
 interval_seconds = 15
 disable_total_stats = false
 total_stats_collector_interval_seconds = 1800
-;basic_auth_username = 
-;basic_auth_password = 
 
 [paths]
 provisioning = /etc/grafana/provisioning
@@ -66,7 +64,7 @@ public_key_retrieval_disabled = false
 public_key_retrieval_on_startup = true
 
 [query]
-concurrent_query_limit = 20
+concurrent_query_limit = 60
 
 [query_history]
 enabled = true
