disable legacy alerting

--- a/config/grafana.ini
+++ b/config/grafana.ini
@@ -1,14 +1,3 @@
-[alerting]
-enabled = true
-execute_alerts = true
-concurrent_render_limit = 10
-evaluation_timeout_seconds = 60
-notification_timeout_seconds = 60
-max_attempts = 3
-min_interval_seconds = 1
-max_annotation_age = 0
-max_annotations_to_keep = 0
-
 ;[database]
 ;#TODO set up database
 ;type = postgres
@@ -74,7 +63,7 @@ enabled = true
 
 [rendering]
 server_url = http://grafana_renderer:8081/render
-callback_url = http://grafana:3000/
+callback_url = http://grafana:3000
 concurrent_render_request_limit = 100
 
 [server]
