--- a/config/grafana.datasource.tempo.yml
+++ b/config/grafana.datasource.tempo.yml
@@ -8,15 +8,17 @@ datasources:
     access: proxy
     basicAuth: false
     jsonData:
-#      tracesToLogsV2:
-#        datasourceUid: 'loki'
-#        spanStartTimeShift: '1h'
-#        spanEndTimeShift: '-1h'
-#        tags: ['job', 'instance', 'pod', 'namespace']
-#        filterByTraceID: false
-#        filterBySpanID: false
-#        customQuery: true
-#        query: 'span="${__span.spanId}"'
+      tracesToLogsV2:
+        datasourceUid: 'loki'
+        spanStartTimeShift: '30m'
+        spanEndTimeShift: '-30m'
+        tags: 
+          - key: service.name
+            value: job
+        filterByTraceID: false
+        filterBySpanID: false
+        customQuery: true
+        query: '{$${__tags}} | json | traceID="$${__trace.traceId}"'
 #      tracesToMetrics:
 #        datasourceUid: 'prometheus'
 #        spanStartTimeShift: '1h'
