Update url display label for traces search

--- a/config/grafana.datasource.loki.yml
+++ b/config/grafana.datasource.loki.yml
@@ -14,4 +14,4 @@ datasources:
           datasourceUid: tempo
           matcherRegex: '(?:"traceID"\:")(\w*)(?:")'
           url: '$${__value.raw}'
-          urlDisplayLabel: 'View Trace'
+          urlDisplayLabel: 'View Traces'
