--- a/config/grafana.datasource.prometheus.yml
+++ b/config/grafana.datasource.prometheus.yml
@@ -14,3 +14,6 @@ datasources:
       cacheLevel: 'High'
       disableRecordingRules: false
       incrementalQueryOverlapWindow: 10m
+      exemplarTraceIdDestinations:
+        - name: traceID
+          datasourceUid: tempo
