Update labels to run instances on linux machines only

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       placement:
         constraints:
           - "node.role==manager"
+          - "node.labels.os==linux"
       rollback_config:
         parallelism: 0
         failure_action: continue
@@ -61,7 +62,7 @@ services:
       replicas: 1
       placement:
         constraints:
-          - "node.labels.platform==linux"
+          - "node.labels.os==linux"
       rollback_config:
         parallelism: 0
         failure_action: continue
