--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       placement:
         constraints:
           - "node.role==manager"
-          - "node.labels.os==linux"
+          - "node.platform.os==linux"
       rollback_config:
         parallelism: 0
         failure_action: continue
@@ -62,7 +62,7 @@ services:
       replicas: 1
       placement:
         constraints:
-          - "node.labels.os==linux"
+          - "node.platform.os==linux"
       rollback_config:
         parallelism: 0
         failure_action: continue
