Update grafana renderer url

--- a/config/grafana.ini
+++ b/config/grafana.ini
@@ -53,7 +53,7 @@ enabled = true
 ;type = database
 
 [rendering]
-server_url = http://grafana_renderer:8081/render
+server_url = http://grafana-renderer:8081/render
 callback_url = http://grafana:3000
 concurrent_render_request_limit = 100
 
