--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,8 @@ services:
       AUTH_TOKEN: ${GRAFANA_RENDERER_AUTH_TOKEN}
       ENABLE_METRICS: 'true'
       LOG_LEVEL: debug
+    command:
+      - ' -port=4300'
     deploy:
       replicas: 1
       placement:
