--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       replicas: 1
       placement:
         constraints:
+          - "node.role==manager"
           - "node.platform.os==linux"
       rollback_config:
         parallelism: 0
